Modification HTML de la page index.html

--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
     <main>
         <h1>Black Digital</h1>
         <p class="tagline">Pour un numérique moins black<p>
-        <p>L'usage fréquent des réseaux sociaux et les
-            problèmes qu'ils impliquent est très bien illustré
-            dans <strong>Nosedive</strong>, issue de la série <strong>Black Mirror</strong>.
+        <p>L'usage fréquent des <strong>réseaux sociaux</strong> et les
+            <strong>problèmes</strong> qu'ils impliquent est très bien illustré
+            dans <strong><span class="bold italic">Nosedive</span></strong>, issue de la série <strong><span class="bold italic">Black Mirror</span></strong>.
         </p>
-        <p>Mais saviez-vous qu'une <strong>problématique
-            environnementale</strong> se cache aussi derrière
+        <p>Mais saviez-vous qu'une <strong><span class="bold">problématique
+            environnementale</span></strong> se cache aussi derrière
             ceux-ci ?
         </p>
         <figure>
             <img src="img/episode-nosedive-black-mirror.jpg" alt="Visuel de Nosedive, épisode 1 de la saison 3 de Black Mirror">
-            <figcaption>Épisode 1 de la saison 3 de Black Mirror, Nosedive</figcaption>
+            <figcaption>Épisode 1 de la saison 3 de <span class="italic">Black Mirror</span>, <span class="italic">Nosedive</span></figcaption>
         </figure>
 
 <!--Régler problème des sources en italique-->
 
         <p>Venez découvrir pourquoi grâce à votre site
-            préféré : <strong>Black Digital</strong>.</p>
+            préféré : <span class="bold">Black Digital</span>.</p>
         <img src="img/fleche-bas.png" alt="Flèche vers le bas">
 
         <div class="nav-autres-pages">
@@ -53,7 +53,7 @@
                 <h2>Nosedive et la surconsommation des
                     réseaux sociaux</h2>
                 <img src="img/affiche-episode-nosedive-black-mirror.jpg" alt="Affiche de l'épisode 1 de la saison 3 de Black Mirror, Nosedive">
-                <p id="tweet article-1">Black Mirror émet une critique cinématographique de
+                <p id="tweet article-1"><span class="italic">Black Mirror</span> émet une critique cinématographique de
                     différents aspects des médias sociaux.</p>
                 <a href="nosedive-et-la-surconsommation-des-reseaux-sociaux.html" class="bouton">Voir plus</a>
             </div>
@@ -76,11 +76,11 @@
             </div>
 
             <div id="nav-a-propos">
-                <a href="a-propos.html">A propos</a>
+                <a href="a-propos.html" class="bouton">A propos</a>
             </div>
 
             <div id="nav-autres-projets">
-                <a href="autres-projets.html">Autres projets</a>
+                <a href="autres-projets.html" class="bouton">Autres projets</a>
             </div>
         </div>
     </main>
