--- a/a-propos.html
+++ b/a-propos.html
@@ -28,18 +28,18 @@
 
     <main>
         <h2>A propos</h2>
-        <p>Je suis <strong>Sebastian CHEVALLIER</strong> et j’ai 18 ans. Etudiant
-            en première année de <strong>DUT Métiers du Multimédia et de
-                l’Internet</strong> à Montbéliard, j’ai créé ce site de A à Z dans le
+        <p>Je suis <span class="bold">Sebastian CHEVALLIER</span> et j’ai 18 ans. Etudiant
+            en première année de <span class="bold">DUT Métiers du Multimédia et de
+                l’Internet</span> à Montbéliard, j’ai créé ce site de A à Z dans le
             cadre de mon projet individuel de premier semestre.
         </p>
-        <p>L’exercice consistait à <strong>créer un site web</strong>, optimisé pour
+        <p>L’exercice consistait à <span class="bold">créer un site web</span>, optimisé pour
             iPhoneX, au sujet d’un aspect néfaste très peu connu du
-            web : <strong>la pollution numérique</strong>. Nous devions, à partir
+            web : <span class="bold">la pollution numérique</span>. Nous devions, à partir
             d’une œuvre cinématographique, mettre en avant cette
             pollution en la critiquant, puis en exposant des solutions
             pour la réduire. J’ai donc choisi de parler de l’épisode 1
-            de la saison 3 de Black Mirror : <strong>Nosedive</strong> (ou <strong>Chute libre</strong>)
+            de la saison 3 de <span class="italic">Black Mirror</span> : <span class="bold italic">Nosedive</span> (ou <span class="bold italic">Chute libre</span>)
             afin d’exposer le fait que l’utilisation excessive des
             smartphones et des réseaux sociaux entraînent une
             pollution beaucoup trop conséquente à l’échelle
@@ -78,7 +78,7 @@
                 </div>
 
                 <div>
-                    <a href="autres-projets.html">Envoyer</a>
+                    <a href="autres-projets.html" class="bouton">Envoyer</a>
                 </div>
             </form>
         </div>
