Ecriture de la page nosedive-et-la-surconsommation-des-reseaux-sociaux.html

--- a/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
+++ b/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
@@ -1,10 +1,211 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nosedive et la surconsommation des réseaux sociaux</title>
 </head>
-<body>
 
+<body class="nosedive-et-la-surconsommation-des-reseaux-sociaux">
+    <header>
+        <h1><a href="index.html">Black Digital</a></h1>
+        <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+            <div class="nav-toggle-bar"></div>
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="nosedive-et-la-surconsommation-des-reseaux-sociaux.html">Nosedive et la surconsommation des réseaux sociaux</a></li>
+                <li><a href="lacie-une-pollueuse-inconsciente.html">Lacie, une pollueuse inconsciente</a></li>
+                <li><a href="des-solutions-envisageables.html">Des solutions envisageables ?</a></li>
+                <li><a href="a-propos.html">A propos</a></li>
+                <li><a href="autres-projets.html">Autres projets</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="article-1">
+        <h2><strong>Nosedive</strong> et la <strong>surconsommation</strong>
+            des <strong>réseaux sociaux</strong></h2>
+
+        <p class="chapeau">De nos jours, l’usage excessif des <strong>réseaux
+            sociaux</strong> quels qu’ils soient pose un véritable
+            <strong>problème</strong> aussi bien social, qu’environnemental.
+            <strong>Black Mirror</strong>, série populaire pour ses
+            nombreuses critiques des nouvelles
+            technologies, illustre parfaitement cette idée à
+            travers l’épisode 1 de la saison 3 : <strong>Nosedive</strong> (ou
+            <strong>Chute Libre</strong>).</p>
+
+        <figure>
+            <img src="img/nosedive-post-photo-reseau-social.png" alt="Lacie photographie son petit déjeuner et prépare à le poster sur son réseau social préféré">
+            <figcaption>Lacie poste une photo sur son réseau social favori, <span class="italic">Nosedive</span></figcaption>
+        </figure>
+
+        <div class="article-1 partie-1">
+            <h3>Une vie idéale sur <span class="barre">le papier</span> l'écran</h3>
+
+            <p><strong><span class="bold italic">Nosedive</span></strong> est le premier épisode indépendant de la
+                saison 3 de <strong><span class="bold italic">Black Mirror</span></strong>. Cet épisode nous plonge dans
+                un <span class="bold">univers futuriste</span>, qui pourrait nous attendre d’ici
+                quelques décennies.</p>
+
+            <video controls width="100%" height="auto">
+                <source src="video/black-mirror-saison-3-bande-annonce-vf-netflix-france.mp4" type="video/mp4">
+                <p>Votre naviguateur ne prend pas en charge les vidéos HTML5.</p>
+            </video>
+
+            <p>Pour visionner cet épisode sur Netflix, rendez-vous <a href="https://www.netflix.com/watch/80104627?trackId=200257859">ici</a>.</p>
+
+            <section class="carrousel">
+                <h4>Les autres épisodes de la saison 3</h4>
+
+                <ul class="carrousel-items">
+                    <li class="carrousel-item">
+                        <img src="img/playtest-episode-black-mirror.jpg" alt="Visuel de Playtest, épisode 2 de la saison 3 de Black Mirror">
+                        <a href="https://www.netflix.com/watch/80104630?trackId=200257859">Épisode 2 - Playtest</a>
+                    </li>
+
+                    <li class="carrousel-item">
+                        <img src="img/shut-up-and-dance-episode-black-mirror.jpg" alt="Visuel de Shut Up and Dance, épisode 3 de la saison 3 de Black Mirror">
+                        <a href="https://www.netflix.com/watch/80104626?trackId=200257859">Épisode 3 - Shut Up and Dance</a>
+                    </li>
+
+                    <li class="carrousel-item">
+                        <img src="img/san-junipero-episode-black-miror.jpg" alt="Visuel de San Junipero, épisode 4 de la saison 3 de Black Mirror">
+                        <a href="https://www.netflix.com/watch/80104625?trackId=200257859">Épisode 4 - San Junipero</a>
+                    </li>
+
+                    <li class="carrousel-item">
+                        <img src="img/men-against-fire-episode-black-mirror.jpg" alt="Visuel de Men Against Fire, épisode 5 de la saison 3 de Black Mirror">
+                        <a href="https://www.netflix.com/watch/80104628?trackId=200257859">Épisode 5 - Men Against Fire</a>
+                    </li>
+
+                    <li class="carrousel-item">
+                        <img src="img/hated-in-the-nation-episode-black-mirror.jpg" alt="Visuel de Hated in the Nation, épisode 6 de la saison 3 de Black Mirror">
+                        <a href="https://www.netflix.com/watch/80104629?trackId=200257859">Épisode 6 - Hated in the Nation</a>
+                    </li>
+                </ul>
+            </section>
+
+            <p>On suit l’histoire du personnage de <strong><span class="bold">Lacie</span></strong>, joué par
+                l’actrice Bryce Dallas Howard, qui évolue dans cet
+                <strong>environnement</strong>. Elle vit dans une <strong>société</strong> où tout semble
+                <span class="bold">exceptionnel</span> : des couleurs pastel, des lieux <strong>parfaits</strong> et
+                des gens qui font tout pour l’être également. Dans
+                l’œuvre, tout se base sur <span class="bold">l’utilisation d’un <strong>réseau social</strong></span>.
+                Il est indispensable pour mener une vie la plus <strong>parfaite</strong>
+                possible.</p>
+
+            <p>Chaque individu a une <span class="bold"><strong>note</strong> attribuée</span> qui évolue
+                continuellement. Elle peut varier de 0 à 5, le but étant
+                d’obtenir la <strong>note</strong> maximale.</p>
+
+            <p>Chaque citoyen possède un <span class="bold">profil <strong>social</strong></span>, comme c’est
+                le cas pour la plupart d’entre nous dans notre <strong>société</strong>
+                actuelle. <span class="bold">Facebook</span>, <span class="bold">Instagram</span> ou <span class="bold">Snapchat</span>, tous ont
+                un fonctionnement et des caractéristiques semblables.
+                On les retrouve également dans la série. Le mur
+                d’accueil avec les publications récentes, les post
+                classiques (photos, vidéos, …) ou encore, les appels en
+                FaceTime, tout nous semble très familier. Les membres
+                s’évaluent entre eux en fonction de leur contenu. C’est
+                donc l’image qu’ils renvoient qui est <span class="bold">déterminante</span> dans
+                ce système de notation.</p>
+
+            <figure>
+                <img src="img/nosedive-lacie-photgraphie-quotidien.png" alt="Lacie prend en photo son quotidien afin de compléter son profil et d'obtenir une note plus élevéé">
+                <figcaption>Lacie photographie son quotidien afin d'obtenir un
+                    note plus élevée, <span class="italic">Nosedive</span></figcaption>
+            </figure>
+
+            <p>Avoir une <strong>note</strong> <span class="bold">élevée</span> permet l’accès à certains
+                <span class="bold">privilèges</span> que d’autres n’ont pas dans cette <strong>société</strong>.
+                Par exemple, dans l’épisode, <strong>Lacie</strong> a pour but de
+                côtoyer les influenceurs les mieux notés, donc les plus
+                populaires. Elle veut ainsi, obtenir une <strong>note</strong> de 4,5 afin
+                d’avoir l’appartement de ses rêves.</p>
+
+            <p>Cela pose un réel <strong><span class="bold">problème</span></strong>. Tout le monde doit
+                paraître le plus aimable, le plus intéressant possible.
+                Sinon, une personne mal notée sur le <strong>réseau social</strong>
+                mènera une vie misérable.</p>
+        </div>
+
+        <div class="article-1 partie-2">
+            <h3>La <strong>surconsommation</strong> des <strong>réseaux sociaux</strong></h3>
+
+            <p>Saviez-vous qu’un individu sur deux est actif sur les
+                <strong>réseaux sociaux</strong> quotidiennement ? Et que chacun
+                d’entre eux passe environ 2 heures de son temps libre
+                sur ceux-ci ?</p>
+
+            <p>De nos jours, les <strong><span class="bold">réseaux sociaux</span></strong> sont <span class="bold">indispensables</span>
+                et <span class="bold">omniprésents</span> au sein de la société. L’épisode
+                <strong><span class="italic">Nosedive</span></strong> illustre parfaitement cette place beaucoup
+                trop importante. Il met en avant des personnages qui
+                ne peuvent se passer ni de leur téléphone, ni de
+                l’utilisation du <strong>réseau social</strong>. Sans ce dernier, ils sont
+                <span class="bold">incapables</span> de mener une vie idéale.</p>
+
+            <figure>
+                <img src="img/nosedive-lacie-note-reseau-social.png" alt="Lacie choisit une note à attribuer aux personnes qu'elle vient de rencontrer">
+                <figcaption>Lacie attribue une note aux personnes qu'elle rencontre, <span class="italic">Nosedive</span></figcaption>
+            </figure>
+
+            <p>La série expose les <strong><span class="bold">problèmes</span></strong> liés aux <strong>réseaux sociaux</strong>
+                d’un point de vue <strong><span class="bold">social</span></strong>. Tout le monde se met en avant
+                sans forcément montrer sa réelle personne. L’objectif
+                étant de développer au maximum sa <span class="bold">communauté</span>, il
+                faut faire paraître une vie extraordinaire. Il existe une
+                véritable <span class="bold">concurrence</span> entre les différents influenceurs à
+                ce niveau-là. L’épisode montre donc, que se faire passer
+                pour une personne que nous ne sommes pas peut vite
+                devenir invivable.</p>
+        </div>
+
+        <div class="article-1 partie-3">
+            <h3>Un <strong>problème</strong> à l'échelle planétaire</h3>
+
+            <p>Mais la <strong><span class="bold">surconsommation</span></strong> des <strong>réseaux sociaux</strong> pose
+                également un autre <strong>problème</strong> : la <strong><span class="bold">pollution numérique</span></strong>.
+                Ce phénomène est trop méconnu du grand public. Bien
+                que l’actualité parle de plus en plus du réchauffement
+                climatique, les <span class="bold">graves conséquences du web</span> sur
+                l’<strong>environnement</strong> ne sont pas assez mises en avant par
+                les médias.</p>
+
+            <figure>
+                <img src="img/reseaux-sociaux-applications.jpg" alt="Écran de téléphone de portable sur lequel on peut voir les différents réseaux sociaux actuels">
+                <figcaption>Les réseaux sociaux les plus utilisés actuellement, <span class="italic">Unsplash</span></figcaption>
+            </figure>
+
+            <p>Si vous voulez en savoir, je vous propose de suivre ce
+                lien, vers le deuxième article traitant de la <strong>pollution
+                numérique</strong>.</p>
+
+            <div id="nav-article-suivant">
+                <a href="lacie-une-pollueuse-inconsciente.html" class="bouton">Article suivant</a>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <address>
+            <p>Sebastian CHEVALLIER MMI TDA2</p>
+            <a href="mailto:sebastian.chvlr@gmail.com">sebastian.chvlr@gmail.com</a>
+        </address>
+
+        <ul class="reseaux-sociaux">
+            <li><a href="https://www.instagram.com/sebastian.chvlr/?hl=fr">Instagram</a></li>
+            <li><a href="https://www.facebook.com/sebastian.chvlr/">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/sebastian-chevallier-5558a11ba/">LinkedIn</a></li>
+        </ul>
+
+        <p class="mentions-legales">"Projet réalisé dans le cadre d'un exercice pédagogique
+            au département <a href="http://mmimontbeliard.com/">MMI de Montbéliard</a>"</p>
+    </footer>
 </body>
 </html>
