--- a/lacie-une-pollueuse-inconsciente.html
+++ b/lacie-une-pollueuse-inconsciente.html
@@ -1,10 +1,213 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lacie, une pollueuse inconsciente</title>
 </head>
-<body>
 
+<body class="lacie-une-pollueuse-inconsciente">
+    <header>
+        <h1><a href="index.html">Black Digital</a></h1>
+        <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+            <div class="nav-toggle-bar"></div>
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="nosedive-et-la-surconsommation-des-reseaux-sociaux.html">Nosedive et la surconsommation des réseaux sociaux</a></li>
+                <li><a href="lacie-une-pollueuse-inconsciente.html">Lacie, une pollueuse inconsciente</a></li>
+                <li><a href="des-solutions-envisageables.html">Des solutions envisageables ?</a></li>
+                <li><a href="a-propos.html">A propos</a></li>
+                <li><a href="autres-projets.html">Autres projets</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="article-2">
+        <h2>Lacie, une pollueuse inconsciente</h2>
+
+        <p class="chapeau">Incontestablement, <strong>Internet</strong> pollue énormément.
+            En effet, il surconsomme de l’<strong>électricité</strong> à foison.
+            Imaginez, qu’<strong>Internet</strong> soit un pays. Il aurait été le
+            3ème plus gros consommateur d’<strong>électricité</strong> à
+            l’échelle mondiale. Puisqu’il consomme 7 à 10%
+            de l’<strong>électricité</strong> mondiale.</p>
+
+        <p class="chapeau">Mais qu’est ce qui pollue réellement dans l’usage
+            que nous faisons du <strong>numérique</strong> ?</p>
+
+        <div class="article-2 partie-1">
+            <h3><strong>Consommation</strong> d'<strong>énergie</strong> et rejet de <strong>CO2</strong></h3>
+
+            <p>Pour mieux le comprendre : <a href="https://lejournal.cnrs.fr/billets/le-big-data-est-il-polluant">Le <strong>Big Data</strong> est-il polluant ?</a>
+                par Jean-Marc Pierson et Laurent Lefèvre.</p>
+
+            <figure>
+                <img src="img/energie-electricite-etats-unis-amerique.jpg" alt="Les États-Unis éclairés illustrant la surconsommation d'énergie dans ce pays">
+                <figcaption>La surconsommation d'énergie des États-unis d'Amérique, <span class="italic">Unsplash</span></figcaption>
+            </figure>
+
+            <p>« Chaque jour, l’industrie du <strong>Big Data</strong> se fait plus grosse,
+                représentant déjà plus de 4 millions d’emplois directs
+                dans le monde !</p>
+
+            <q class="citation">Mais il y a une donnée que nous avons peut-être
+                oubliée en route : tout a un coût. Et celui du <strong>Big
+                Data</strong> est <strong>écologique</strong>. […] N’ayons pas peur des
+                mots : oui, le <strong>Big Data</strong> pollue.</q>
+
+            <p>[…] Le <strong>Big Data</strong> (ou « <span class="bold">mégadonnées</span> » en français)
+                désigne tout à la fois la faculté de produire ou de
+                collecter des données numériques, de les stocker, de
+                les analyser et de les visualiser. Il est très souvent défini
+                par ses caractéristiques liées aux « <span class="bold">3V</span> » (<span class="bold">volume</span>,
+                <span class="bold">variabilité</span>, <span class="bold">vélocité</span>) : les données arrivent en masse,
+                notamment avec l’arrivée conjointe de l’<strong>Internet</strong> des
+                objets, à une vitesse sans précédent et sont de nature
+                plus variée que par le passé. […] Des infrastructures
+                pharaoniques sont donc déjà nécessaires pour <span class="bold">stocker</span>
+                cette avalanche de <strong>données</strong>, mais il faut y ajouter celles
+                pour les <span class="bold">traiter</span>. L’analyse de <strong>données</strong>, provenant
+                d’observations de l’<strong>environnement</strong>, d’expériences
+                scientifiques ou encore de données marketing,
+                nécessite des moyens de calcul très importants,
+                concentrés dans des grands centres et des
+                supercalculateurs.</p>
+
+            <p>Prenons l’exemple de Google, qui indexe des millions de
+                documents pour faciliter et accélérer la recherche. Ces
+                <strong><span class="bold">données</span></strong> sont aussi <span class="bold">analysées</span> pour pouvoir proposer
+                aux utilisateurs des contenus publicitaires : c’est sur
+                cette approche que repose son modèle économique.
+                Or, pour réaliser ces traitements, on estime que Google
+                possède plus d’un million de serveurs, comme les trois
+                autres géants du Web que sont Amazon, Microsoft et
+                Facebook. Qu’elles possèdent leurs <span class="bold">propres
+                infrastructures</span> ou qu’elles les louent, les entreprises et
+                les institutions plus modestes font souvent appel à des
+                milliers d’équipements interconnectés, depuis la
+                capture de <strong>données</strong> jusqu’à leur analyse.</p>
+
+            <p><span class="bold">Une demande énergétique croissante à contenir</span></p>
+
+            <p>Des travaux, comme ceux du groupement de service
+                Écoinfo, créé par le CNRS, sont venus rappeler à quel
+                point les technologies de l’information sont
+                <span class="bold">consommatrices d’<strong>énergie</strong></span> et produisent des <strong><span class="bold">gaz à effet
+                de serre</span></strong> à toutes les étapes de leur cycle de vie :
+                conception et transport des équipements, usage et fin
+                de vie. En phase d’utilisation, les éléments essentiels du
+                <strong>Big Data</strong> peuvent se répartir en trois catégories : les
+                équipements terminaux, les réseaux et les <strong>centres de
+                données</strong> qui consomment chacune une puissance
+                <strong>électrique</strong> comparable, de l’ordre de 40 gigawatts en
+                2013, soit une quarantaine de tranches de centrales
+                nucléaire. Un chiffre qui a forcément des
+                répercussions sur le <span class="bold">climat</span>, même si cet <span class="bold">impact carbone</span>
+                dépend du mix énergétique du pays d’usage (34
+                grammes de CO2 par kwh en France en février). »</p>
+
+            <p>Vous l’aurez compris, <strong>Internet</strong> fonctionne grâce aux
+                <strong><span class="bold">centres de données</span></strong>. Ils sont au nombre de 4 500 dans le
+                monde. Ce sont eux qui font transiter les informations et
+                qui stockent toutes les <strong>données</strong> que nous produisons
+                fréquemment. Sans eux, plus d’<strong>Internet</strong> !</p>
+
+            <p>Il est donc important de les maintenir en activité 24h/24
+                et 7j/7. Leur <span class="bold"><strong>consommation</strong> énergétique</span> équivaut à celle
+                d’une ville de 30 000 habitants. Un <span class="bold">système de
+                climatisation</span> est, en outre, nécessaire afin de réduire la
+                forte chaleur qu’ils produisent.</p>
+
+            <figure>
+                <img src="img/energie-data-center.jpg" alt="Les Data centers consomment énormément d'électricité pour fonctionner correctement">
+                <figcaption>Énergie utilisée pour le fonctionnement des
+                    data centers, <span class="italic">Unsplash</span></figcaption>
+            </figure>
+
+            <p>Leur utilisation <span class="bold">constante</span> est donc <span class="bold">source de <strong>pollution</strong></span>.</p>
+
+            <p>Si vous souhaitez en apprendre davantage sur le
+                fonctionnement des <strong>centres de données</strong>, rendez-vous <a href="https://fr.wikipedia.org/wiki/Centre_de_données">ici</a>.</p>
+        </div>
+
+        <div class="article-2 partie-2">
+            <h3>Les <strong>réseaux sociaux</strong>, une problématique
+                environnementale</h3>
+
+            <p>Le <strong>numérique</strong> est source de <strong><span class="bold">pollution</span></strong>. Il produit 3,8% des
+                <strong><span class="bold">gaz à effet de serre</span></strong> du monde et dépasserait les 8% en
+                2025. Il consomme également <span class="bold">16%</span> de la <span class="bold"><strong>consommation
+                électrique</strong> mondiale</span>.</p>
+
+            <p>Improbable, non ?</p>
+
+            <figure>
+                <img src="img/usine-nucleaire-fumee.jpg" alt="Nuage de fumée qui s'échappe d'une cheminée de centrale nucléaire">
+                <figcaption>Fumée s'échappant d'une centrale
+                    nucléaire, <span class="italic">Pexels</span></figcaption>
+            </figure>
+
+            <p>Nous l’avons vu, dans la série, Lacie est addicte aux
+                <strong>réseaux sociaux</strong>. Est-elle consciente que l’<span class="bold">usage
+                excessif</span> qu’elle en fait n’est pas exempt d’<strong><span class="bold">empreinte
+                carbone</span></strong> ?</p>
+
+            <p>On peut distinguer plusieurs usages polluants dans
+                <span class="italic">Nosedive</span> :</p>
+
+            <ul>
+                <li>Les <span class="bold">partages</span> : les photos et vidéos partagées sur le
+                    réseau pèsent lourd en CO2. On en retrouve 95 millions
+                    quotidiennement, sur Instagram</li>
+
+                <li>Les <strong><span class="bold">métadonnées</span></strong> : la géolocalisation constante des
+                    membres</li>
+
+                <li>Les <span class="bold">discussions instantanées</span> : quand les FaceTime
+                    sont privilégiés aux SMS</li>
+            </ul>
+
+            <figure>
+                <img src="img/illustration-fille-post-reseaux-sociaux.jpg" alt="Illustration d'une fille dans un cadre semblable au post Instagram">
+                <figcaption>Les réseaux sociaux sont aujourd'hui omniprésents, <span class="italic">Pinterest</span></figcaption>
+            </figure>
+
+            <p>La <strong><span class="bold">surconsommation</span></strong> actuelle des <strong><span class="bold">réseaux sociaux</span></strong> et le
+                nombre d’internautes croissants est donc de plus en
+                plus <span class="bold">néfaste</span> pour l’<strong><span class="bold">environnement</span></strong>.</p>
+        </div>
+
+        <div class="article-2 partie-3">
+            <h3>Une évolution possible ?</h3>
+
+            <p>Mais que peut-elle faire pour <span class="bold">réduire</span> cette <strong><span class="bold">pollution</span></strong> ?</p>
+
+            <p>Si vous voulez le savoir, cela se passe juste ici.</p>
+
+            <div id="nav-article-suivant">
+                <a href="des-solutions-envisageables.html" class="bouton">Article suivant</a>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <address>
+            <p>Sebastian CHEVALLIER MMI TDA2</p>
+            <a href="mailto:sebastian.chvlr@gmail.com">sebastian.chvlr@gmail.com</a>
+        </address>
+
+        <ul class="reseaux-sociaux">
+            <li><a href="https://www.instagram.com/sebastian.chvlr/?hl=fr">Instagram</a></li>
+            <li><a href="https://www.facebook.com/sebastian.chvlr/">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/sebastian-chevallier-5558a11ba/">LinkedIn</a></li>
+        </ul>
+
+        <p class="mentions-legales">"Projet réalisé dans le cadre d'un exercice pédagogique
+            au département <a href="http://mmimontbeliard.com/">MMI de Montbéliard</a>"</p>
+    </footer>
 </body>
 </html>
