--- a/des-solutions-envisageables.html
+++ b/des-solutions-envisageables.html
@@ -1,10 +1,192 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Des solutions envisageables ?</title>
 </head>
-<body>
 
+<body class="des-solutions-envisageables">
+    <header>
+        <h1><a href="index.html">Black Digital</a></h1>
+        <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+            <div class="nav-toggle-bar"></div>
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="nosedive-et-la-surconsommation-des-reseaux-sociaux.html">Nosedive et la surconsommation des réseaux sociaux</a></li>
+                <li><a href="lacie-une-pollueuse-inconsciente.html">Lacie, une pollueuse inconsciente</a></li>
+                <li><a href="des-solutions-envisageables.html">Des solutions envisageables ?</a></li>
+                <li><a href="a-propos.html">A propos</a></li>
+                <li><a href="autres-projets.html">Autres projets</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="article-3">
+        <h2>Des <strong>solutions</strong> envisageables ?</h2>
+
+        <p class="chapeau">Ayant conscience que le web pollue, plusieurs
+            <strong>solutions</strong> ont déjà été mises en place à grande
+            échelle pour tenter de <strong>réduire</strong> cette <strong>pollution</strong>.
+            Mais, il est aussi possible d’agir individuellement.</p>
+
+        <figure>
+            <img src="img/fille-utilisation-numerique-dehors.jpg" alt="Une fille utiise son téléphone et son ordinateur en extérieur, assise dans l'herbe">
+            <figcaption>Utilisation du numérique en extérieur, Karolina Grabowska, <span class="italic">Pexels</span></figcaption>
+        </figure>
+
+        <div class="article-3 partie-1">
+            <h3>Des <strong>Datas centers</strong> <strong>green</strong></h3>
+
+            <p>Les <strong><span class="bold">centres de données</span></strong> sont une des sources de
+                <strong>pollution numérique</strong> <span class="bold">la plus importante</span>. L’utilisation des
+                <strong><span class="bold">énergies renouvelables</span></strong> peut être une <strong>solution</strong>.</p>
+
+            <p><a href="https://fr.wikipedia.org/wiki/Foxconn">Foxconn</a> possède un <strong>centre de données</strong> implanté le long
+                d’un tunnel dans un parc industriel de Chine. Celui-ci est
+                refroidit <span class="bold">uniquement</span> grâce à l'<strong><span class="bold">environnement</span></strong>. La
+                température, l’humidité, la géologie et la direction du
+                vent sont utile dans son <strong><span class="bold">refroidissement</span></strong>. Ce <strong>Data center</strong>
+                n’utilise que ces <strong>énergies renouvelables</strong>.</p>
+
+            <figure>
+                <img src="img/illustration-terre-verte-energies-renouvelables.jpg" alt="Illustration de la Terre verte et préservée grâce à l'utilisation des énergies renouvelables">
+                <figcaption>Des énergies renouvelables pour
+                    préserver la planète, <span class="italic">Pinterest</span></figcaption>
+            </figure>
+
+            <p>D’autres sociétés se veulent aussi <span class="bold">respectives</span> de
+            l’<strong>environnement</strong> en utilisant les <strong>énergies renouvelables</strong>.
+            Un <strong>centre de données</strong>, en Norvège, a été construit sous
+            une <span class="bold">montagne</span> par l’entreprise <a href="https://greenmountain.no/">Green Mountain</a>.
+            <a href="https://www.nautilusdt.com/">Nautilus Data Technologies</a>, eux, créent des <strong>Data centers</strong>
+            <span class="bold">flottants</span>. Ils sont ainsi refroidis grâce à l’eau des rivières.</p>
+        </div>
+
+        <div class="article-3 partie-2">
+            <h3>Exploiter la <strong>chaleur</strong> des <strong>centres de données</strong></h3>
+
+            <p>Les <strong>Data centers</strong> produisent énormément de <strong><span class="bold">chaleur</span></strong>.
+                C’est d’ailleurs pour cela qu’ils exploitent énormément
+                d’eau pour se refroidir.</p>
+
+            <p>Une alternative pour la <span class="bold">diminution</span> des <span class="bold">émissions de <strong>gaz
+                à effet de serre</strong></span> serait de récupérer cette <strong>énergie</strong>. Elle
+                serait ensuite <span class="bold">exploitable</span> pour chauffer d’autres
+                infrastructures.</p>
+
+            <p>C’est ce qu’a décidé de réaliser l’entreprise <a href="https://stimergy.com/">Stimergy</a>
+                avec leurs <span class="bold">chaudières <strong>numériques</strong> <strong>écoresponsables</strong></span>. A
+                Paris, l’eau des bassins d’une piscine est chauffée
+                grâce au système innovant de cette entreprise.
+                Economique, nan ?</p>
+
+            <p>Enfin, de nombreuses <span class="bold">agences web</span> s’engagent pour
+                l’<strong>environnement</strong>. C’est également le cas d’<a href="https://www.onokaa.com/">Onokaa</a>,
+                agence <strong><span class="bold">écoresponsable</span></strong>, vers laquelle je vous redirige.</p>
+        </div>
+
+        <div class="article-3 partie-3">
+            <h3>Vous polluez quotidiennement</h3>
+
+            <video controls>
+                <source src="" type="">
+            </video>
+
+            <p>Vous n’en n’avez pas conscience. Mais le moindre mail,
+                SMS, ou like a une <span class="bold">conséquence</span> sur l’<strong>environnement</strong>.
+                Un mail a, par exemple, une <strong><span class="bold">empreinte carbone</span></strong> de 4
+                grammes de CO2. Un SMS, lui, en a une de 0,014
+                gramme seulement.</p>
+
+            <p>Il est donc essentiel de faire en sorte que votre
+                <strong>consommation</strong> du <strong>numérique</strong> ait une <strong>empreinte carbone</strong>
+                <span class="bold">plus faible</span> et de revoir vos <span class="bold">priorités</span>.</p>
+        </div>
+
+        <div class="article-3 partie-4">
+            <h3>Des <strong>solutions</strong> à votre portée</h3>
+
+            <p>Comment Lacie pourrait avoir un usage des réseaux
+                sociaux <span class="bold">plus <strong>écologique</strong></span> ?</p>
+
+            <p>En appliquant ces quelques gestes <span class="bold">simples</span>, elle pourrait
+                <span class="bold">réduire</span> son <strong>empreinte de carbone</strong>. Si tout le monde
+                s’adonne à faire cela, le numérique deviendrait, petit à
+                petit, plus <strong>écologique</strong>.</p>
+
+            <p>Voici quelques <span class="bold">conseils</span> qu’elle pourrait appliquer, sur
+                ses réseaux, par exemple :</p>
+
+            <ul>
+                <li>Privilégier une connexion Wi-Fi à la 4G</li>
+                <li>Réduire sa <strong>consommation</strong> de vidéos</li>
+                <li>Réduire la résolution des photos et des vidéos</li>
+                <li>Ne plus scroller sans arrêt sur les réseaux sociaux</li>
+                <li>Désactiver la lecture automatique des vidéos</li>
+                <li>Mettre en place un économiseur de données</li>
+                <li>Désactiver la géolocalisation afin d’éviter le transfert
+                    des données</li>
+            </ul>
+        </div>
+
+        <div class="article-3 partie-5">
+            <h3>Lire ceci c'est bien, agir c'est mieux</h3>
+
+            <p>En janvier 2019, on comptait 3,48 milliards d’utilisateurs
+                actifs sur les réseaux sociaux. Pour Facebook, chaque
+                utilisateur pèse, par an, 269 grammes de CO2. La
+                <span class="bold"><strong>pollution</strong> digitale</span> des réseaux sociaux est <span class="bold">démesurée</span>.</p>
+
+            <p>Imaginez alors qu’une grande majorité des utilisateurs
+                de Facebook appliquerait ces petits gestes au quotidien.
+                Ne pensez-vous pas que le monde se porterait mieux ?</p>
+
+            <p id="citation">Nous sommes tous concernés.
+                Alors tentez d’agir en conséquence.</p>
+
+            <figure>
+                <img src="img/illustration-main-sauve-la-terre.jpg" alt="Illustration d'une main qui tient une plante qui pousse avec un message d'espoir">
+                <figcaption>Main tenant une plante qui
+                    pousse, <span class="italic">Pinterest</span></figcaption>
+            </figure>
+
+            <p class="tagline">Pour un numérique moins black</p>
+
+            <p>Si vous souhaitez des informations complémentaires
+                sur mon site ou me contacter, cliquez sur ce bouton.</p>
+
+            <div id="nav-a-propos">
+                <a href="a-propos.html" class="bouton">A propos</a>
+            </div>
+
+            <p>Et si d’autres sites web qui traitent du même sujet vous
+                intéressent, cliquez là.</p>
+
+            <div id="nav-autres-projets">
+                <a href="autres-projets.html" class="bouton">Autres projets</a>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <address>
+            <p>Sebastian CHEVALLIER MMI TDA2</p>
+            <a href="mailto:sebastian.chvlr@gmail.com">sebastian.chvlr@gmail.com</a>
+        </address>
+
+        <ul class="reseaux-sociaux">
+            <li><a href="https://www.instagram.com/sebastian.chvlr/?hl=fr">Instagram</a></li>
+            <li><a href="https://www.facebook.com/sebastian.chvlr/">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/sebastian-chevallier-5558a11ba/">LinkedIn</a></li>
+        </ul>
+
+        <p class="mentions-legales">"Projet réalisé dans le cadre d'un exercice pédagogique
+            au département <a href="http://mmimontbeliard.com/">MMI de Montbéliard</a>"</p>
+    </footer>
 </body>
 </html>
