Ecriture de la page autres-projets.html

--- a/autres-projets.html
+++ b/autres-projets.html
@@ -1,10 +1,110 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Autres projets</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Lacie, une pollueuse inconsciente</title>
 </head>
-<body>
 
+<body class="autres-projets">
+    <header>
+        <h1><a href="index.html">Black Digital</a></h1>
+        <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+            <div class="nav-toggle-bar"></div>
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="nosedive-et-la-surconsommation-des-reseaux-sociaux.html">Nosedive et la surconsommation des réseaux sociaux</a></li>
+                <li><a href="lacie-une-pollueuse-inconsciente.html">Lacie, une pollueuse inconsciente</a></li>
+                <li><a href="des-solutions-envisageables.html">Des solutions envisageables ?</a></li>
+                <li><a href="a-propos.html">A propos</a></li>
+                <li><a href="autres-projets.html">Autres projets</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Autres projets</h2>
+
+        <p>Si ce projet vous a plu, je vous invite à découvrir ceux de
+            mes camarades de <span class="bold">MMI TDA2</span>, qui traitent tous de la
+            <span class="bold">pollution numérique</span> grâce à différentes œuvres
+            cinématographiques.</p>
+
+        <ul class="projets">
+            <li class="projet zakaria-chikhi">
+                <img src="img/logo-zakaria-chikhi.png" alt="Logo du projet de Zakaria Chikhi">
+                <a href="http://projets1.sarutobi.fr">Zakaria Chikhi</a>
+                <a href="http://projets1.sarutobi.fr">Aux Yeux de Tous</a>
+            </li>
+
+            <li class="projet benoit-claude">
+                <img src="img/logo-benoit-claude.png" alt="Logo du projet de Benoît Claude">
+                <a href="http://projets1.benclaude.fr">Benoît Claude</a>
+                <a href="http://projets1.benclaude.fr">Snowden</a>
+            </li>
+
+            <li class="projet agathe-clement">
+                <img src="img/logo-agathe-clement.png" alt="Logo du projet d'Agathe Clément">
+                <a href="http://projets1.nikaiaa.fr">Agathe Clément</a>
+                <a href="http://projets1.nikaiaa.fr">Unfriended</a>
+            </li>
+
+            <li class="projet jules-crevoisier">
+                <img src="img/logo-jules-crevoisier.png" alt="Logo du projet de Jules Crevoisier">
+                <a href="http://projets1.raptorrouge.fr">Jules Crevoisier</a>
+                <a href="http://projets1.raptorrouge.fr">Iron Man 2</a>
+            </li>
+
+            <li class="projet natacha-deguenon">
+                <img src="img/logo-natacha-deguenon.png" alt="Logo du projet de Natacha Deguenon">
+                <a href="http://projets1.">Natacha Deguenon</a>
+                <a href="http://projets1.">The Social Network</a>
+            </li>
+
+            <li class="projet jean-deleage">
+                <img src="img/logo-jean-deleage.png" alt="Logo du projet de Jean Deléage">
+                <a href="http://projets1.jeandeleage.fr">Jean Deléage</a>
+                <a href="http://projets1.jeandeleage.fr">Her</a>
+            </li>
+
+            <li class="projet thibaud-detony">
+                <img src="img/logo-thibaud-detony.png" alt="Logo du projet de Thibaud Detony">
+                <a href="http://projets1.sozu.fr">Thibaud Detony</a>
+                <a href="http://projets1.sozu.fr">Wall-E</a>
+            </li>
+
+            <li class="projet damien-dubosque">
+                <img src="img/logo-damien-dubosque.png" alt="Logo du projet de Damien Dubosque">
+                <a href="http://projets1.dbsqdamien.fr">Damien Dubosque</a>
+                <a href="http://projets1.dbsqdamien.fr">Unfriended</a>
+            </li>
+
+            <li class="projet hamza-el-kinani">
+                <img src="img/logo-hamza-el-kinani.png" alt="Logo du projet de Hamza El Kinani">
+                <a href="http://projets1.nakmuay25.fr">Hamza El Kinani</a>
+                <a href="http://projets1.nakmuay25.fr">Smithereens</a>
+            </li>
+        </ul>
+    </main>
+
+    <footer>
+        <address>
+            <p>Sebastian CHEVALLIER MMI TDA2</p>
+            <a href="mailto:sebastian.chvlr@gmail.com">sebastian.chvlr@gmail.com</a>
+        </address>
+
+        <ul class="reseaux-sociaux">
+            <li><a href="https://www.instagram.com/sebastian.chvlr/?hl=fr">Instagram</a></li>
+            <li><a href="https://www.facebook.com/sebastian.chvlr/">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/sebastian-chevallier-5558a11ba/">LinkedIn</a></li>
+        </ul>
+
+        <p class="mentions-legales">"Projet réalisé dans le cadre d'un exercice pédagogique
+            au département <a href="http://mmimontbeliard.com/">MMI de Montbéliard</a>"</p>
+    </footer>
 </body>
 </html>
