--- a/lacie-une-pollueuse-inconsciente.html
+++ b/lacie-une-pollueuse-inconsciente.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lacie, une pollueuse inconsciente</title>
+    <link rel="stylesheet" href="css/mescss/styles-typographies-couleurs.css">
 </head>
 
 <body class="lacie-une-pollueuse-inconsciente">
