--- a/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
+++ b/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nosedive et la surconsommation des réseaux sociaux</title>
+    <link rel="stylesheet" href="css/mescss/styles-typographies-couleurs.css">
 </head>
 
 <body class="nosedive-et-la-surconsommation-des-reseaux-sociaux">
