Typographies et couleurs des titres

--- a/des-solutions-envisageables.html
+++ b/des-solutions-envisageables.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="article-3">
-        <h2>Des <strong>solutions</strong> envisageables ?</h2>
+        <h2><span>Des</span> <strong>solutions</strong> envisageables ?</h2>
 
         <p class="chapeau">Ayant conscience que le web pollue, plusieurs
             <strong>solutions</strong> ont déjà été mises en place à grande
