--- a/lacie-une-pollueuse-inconsciente.html
+++ b/lacie-une-pollueuse-inconsciente.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="article-2">
-        <h2>Lacie, une pollueuse inconsciente</h2>
+        <h2><span>Lacie</span>, une pollueuse inconsciente</h2>
 
         <p class="chapeau">Incontestablement, <strong>Internet</strong> pollue énormément.
             En effet, il surconsomme de l’<strong>électricité</strong> à foison.
