--- a/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
+++ b/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="article-1">
-        <h2><strong>Nosedive</strong> et la <strong>surconsommation</strong>
+        <h2><strong><span>Nosedive</span></strong> et la <strong>surconsommation</strong>
             des <strong>réseaux sociaux</strong></h2>
 
         <p class="chapeau">De nos jours, l’usage excessif des <strong>réseaux
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="article-1 partie-1">
-            <h3>Une vie idéale sur <span class="barre">le papier</span> l'écran</h3>
+            <h3>Une vie idéale sur <s>le papier</s> l'écran</h3>
 
             <p><strong><span class="bold italic">Nosedive</span></strong> est le premier épisode indépendant de la
                 saison 3 de <strong><span class="bold italic">Black Mirror</span></strong>. Cet épisode nous plonge dans
