Modifications balises des sources HTML

--- a/a-propos.html
+++ b/a-propos.html
@@ -40,7 +40,7 @@
             d’une œuvre cinématographique, mettre en avant cette
             pollution en la critiquant, puis en exposant des solutions
             pour la réduire. J’ai donc choisi de parler de l’épisode 1
-            de la saison 3 de <span class="italic">Black Mirror</span> : <span class="bold italic">Nosedive</span> (ou <span class="bold italic">Chute libre</span>)
+            de la saison 3 de <cite>Black Mirror</cite> : <cite class="bold">Nosedive</cite> (ou <cite class="bold">Chute libre</cite>)
             afin d’exposer le fait que l’utilisation excessive des
             smartphones et des réseaux sociaux entraînent une
             pollution beaucoup trop conséquente à l’échelle
