--- a/des-solutions-envisageables.html
+++ b/des-solutions-envisageables.html
@@ -37,7 +37,7 @@
 
         <figure>
             <img src="img/fille-utilisation-numerique-dehors.jpg" alt="Une fille utiise son téléphone et son ordinateur en extérieur, assise dans l'herbe">
-            <figcaption>Utilisation du numérique en extérieur, Karolina Grabowska, <span class="italic">Pexels</span></figcaption>
+            <figcaption>Utilisation du numérique en extérieur, Karolina Grabowska, <cite>Pexels</cite></figcaption>
         </figure>
 
         <div class="article-3 partie-1">
@@ -57,7 +57,7 @@
             <figure>
                 <img src="img/illustration-terre-verte-energies-renouvelables.jpg" alt="Illustration de la Terre verte et préservée grâce à l'utilisation des énergies renouvelables">
                 <figcaption>Des énergies renouvelables pour
-                    préserver la planète, <span class="italic">Pinterest</span></figcaption>
+                    préserver la planète, <cite>Pinterest</cite></figcaption>
             </figure>
 
             <p>D’autres sociétés se veulent aussi <span class="bold">respectives</span> de
@@ -153,7 +153,7 @@
             <figure>
                 <img src="img/illustration-main-sauve-la-terre.jpg" alt="Illustration d'une main qui tient une plante qui pousse avec un message d'espoir">
                 <figcaption>Main tenant une plante qui
-                    pousse, <span class="italic">Pinterest</span></figcaption>
+                    pousse, <cite>Pinterest</cite></figcaption>
             </figure>
 
             <p class="tagline">Pour un numérique moins black</p>
