--- a/lacie-une-pollueuse-inconsciente.html
+++ b/lacie-une-pollueuse-inconsciente.html
@@ -48,7 +48,7 @@
 
             <figure>
                 <img src="img/energie-electricite-etats-unis-amerique.jpg" alt="Les États-Unis éclairés illustrant la surconsommation d'énergie dans ce pays">
-                <figcaption>La surconsommation d'énergie des États-unis d'Amérique, <span class="italic">Unsplash</span></figcaption>
+                <figcaption>La surconsommation d'énergie des États-unis d'Amérique, <cite>Unsplash</cite></figcaption>
             </figure>
 
             <p>« Chaque jour, l’industrie du <strong>Big Data</strong> se fait plus grosse,
@@ -126,7 +126,7 @@
             <figure>
                 <img src="img/energie-data-center.jpg" alt="Les Data centers consomment énormément d'électricité pour fonctionner correctement">
                 <figcaption>Énergie utilisée pour le fonctionnement des
-                    data centers, <span class="italic">Unsplash</span></figcaption>
+                    data centers, <cite>Unsplash</cite></figcaption>
             </figure>
 
             <p>Leur utilisation <span class="bold">constante</span> est donc <span class="bold">source de <strong>pollution</strong></span>.</p>
@@ -149,7 +149,7 @@
             <figure>
                 <img src="img/usine-nucleaire-fumee.jpg" alt="Nuage de fumée qui s'échappe d'une cheminée de centrale nucléaire">
                 <figcaption>Fumée s'échappant d'une centrale
-                    nucléaire, <span class="italic">Pexels</span></figcaption>
+                    nucléaire, <cite>Pexels</cite></figcaption>
             </figure>
 
             <p>Nous l’avons vu, dans la série, Lacie est addicte aux
@@ -158,7 +158,7 @@
                 carbone</span></strong> ?</p>
 
             <p>On peut distinguer plusieurs usages polluants dans
-                <span class="italic">Nosedive</span> :</p>
+                <cite>Nosedive</cite> :</p>
 
             <ul>
                 <li>Les <span class="bold">partages</span> : les photos et vidéos partagées sur le
@@ -174,7 +174,7 @@
 
             <figure>
                 <img src="img/illustration-fille-post-reseaux-sociaux.jpg" alt="Illustration d'une fille dans un cadre semblable au post Instagram">
-                <figcaption>Les réseaux sociaux sont aujourd'hui omniprésents, <span class="italic">Pinterest</span></figcaption>
+                <figcaption>Les réseaux sociaux sont aujourd'hui omniprésents, <cite>Pinterest</cite></figcaption>
             </figure>
 
             <p>La <strong><span class="bold">surconsommation</span></strong> actuelle des <strong><span class="bold">réseaux sociaux</span></strong> et le
