--- a/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
+++ b/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
@@ -42,14 +42,14 @@
 
         <figure>
             <img src="img/nosedive-post-photo-reseau-social.png" alt="Lacie photographie son petit déjeuner et prépare à le poster sur son réseau social préféré">
-            <figcaption>Lacie poste une photo sur son réseau social favori, <span class="italic">Nosedive</span></figcaption>
+            <figcaption>Lacie poste une photo sur son réseau social favori, <cite>Nosedive</cite></figcaption>
         </figure>
 
         <div class="article-1 partie-1">
             <h3>Une vie idéale sur <s>le papier</s> l'écran</h3>
 
-            <p><strong><span class="bold italic">Nosedive</span></strong> est le premier épisode indépendant de la
-                saison 3 de <strong><span class="bold italic">Black Mirror</span></strong>. Cet épisode nous plonge dans
+            <p><strong><cite class="bold">Nosedive</cite></strong> est le premier épisode indépendant de la
+                saison 3 de <strong><cite class="bold">Black Mirror</cite></strong>. Cet épisode nous plonge dans
                 un <span class="bold">univers futuriste</span>, qui pourrait nous attendre d’ici
                 quelques décennies.</p>
 
@@ -119,7 +119,7 @@
             <figure>
                 <img src="img/nosedive-lacie-photgraphie-quotidien.png" alt="Lacie prend en photo son quotidien afin de compléter son profil et d'obtenir une note plus élevéé">
                 <figcaption>Lacie photographie son quotidien afin d'obtenir un
-                    note plus élevée, <span class="italic">Nosedive</span></figcaption>
+                    note plus élevée, <cite>Nosedive</cite></figcaption>
             </figure>
 
             <p>Avoir une <strong>note</strong> <span class="bold">élevée</span> permet l’accès à certains
@@ -145,7 +145,7 @@
 
             <p>De nos jours, les <strong><span class="bold">réseaux sociaux</span></strong> sont <span class="bold">indispensables</span>
                 et <span class="bold">omniprésents</span> au sein de la société. L’épisode
-                <strong><span class="italic">Nosedive</span></strong> illustre parfaitement cette place beaucoup
+                <strong><cite>Nosedive</cite></strong> illustre parfaitement cette place beaucoup
                 trop importante. Il met en avant des personnages qui
                 ne peuvent se passer ni de leur téléphone, ni de
                 l’utilisation du <strong>réseau social</strong>. Sans ce dernier, ils sont
@@ -153,7 +153,7 @@
 
             <figure>
                 <img src="img/nosedive-lacie-note-reseau-social.png" alt="Lacie choisit une note à attribuer aux personnes qu'elle vient de rencontrer">
-                <figcaption>Lacie attribue une note aux personnes qu'elle rencontre, <span class="italic">Nosedive</span></figcaption>
+                <figcaption>Lacie attribue une note aux personnes qu'elle rencontre, <cite>Nosedive</cite></figcaption>
             </figure>
 
             <p>La série expose les <strong><span class="bold">problèmes</span></strong> liés aux <strong>réseaux sociaux</strong>
@@ -180,7 +180,7 @@
 
             <figure>
                 <img src="img/reseaux-sociaux-applications.jpg" alt="Écran de téléphone de portable sur lequel on peut voir les différents réseaux sociaux actuels">
-                <figcaption>Les réseaux sociaux les plus utilisés actuellement, <span class="italic">Unsplash</span></figcaption>
+                <figcaption>Les réseaux sociaux les plus utilisés actuellement, <cite>Unsplash</cite></figcaption>
             </figure>
 
             <p>Si vous voulez en savoir, je vous propose de suivre ce
