--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="tagline">Pour un numérique moins black<p>
         <p>L'usage fréquent des <strong>réseaux sociaux</strong> et les
             <strong>problèmes</strong> qu'ils impliquent est très bien illustré
-            dans <strong><span class="bold italic">Nosedive</span></strong>, issue de la série <strong><span class="bold italic">Black Mirror</span></strong>.
+            dans <strong><cite class="bold">Nosedive</cite></strong>, issue de la série <strong><cite class="bold">Black Mirror</cite></strong>.
         </p>
         <p>Mais saviez-vous qu'une <strong><span class="bold">problématique
             environnementale</span></strong> se cache aussi derrière
@@ -40,7 +40,7 @@
         </p>
         <figure>
             <img src="img/episode-nosedive-black-mirror.jpg" alt="Visuel de Nosedive, épisode 1 de la saison 3 de Black Mirror">
-            <figcaption>Épisode 1 de la saison 3 de <span class="italic">Black Mirror</span>, <span class="italic">Nosedive</span></figcaption>
+            <figcaption>Épisode 1 de la saison 3 de <cite>Black Mirror</cite>, <cite>Nosedive</cite></figcaption>
         </figure>
 
 <!--Régler problème des sources en italique-->
@@ -54,7 +54,7 @@
                 <h2>Nosedive et la surconsommation des
                     réseaux sociaux</h2>
                 <img src="img/affiche-episode-nosedive-black-mirror.jpg" alt="Affiche de l'épisode 1 de la saison 3 de Black Mirror, Nosedive">
-                <p id="tweet article-1"><span class="italic">Black Mirror</span> émet une critique cinématographique de
+                <p id="tweet article-1"><cite>Black Mirror</cite> émet une critique cinématographique de
                     différents aspects des médias sociaux.</p>
                 <a href="nosedive-et-la-surconsommation-des-reseaux-sociaux.html" class="bouton">Voir plus</a>
             </div>
