Modifications balises des sources HTML

--- a/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
+++ b/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
@@ -34,11 +34,11 @@
         <p class="chapeau">De nos jours, l’usage excessif des <strong>réseaux
             sociaux</strong> quels qu’ils soient pose un véritable
             <strong>problème</strong> aussi bien social, qu’environnemental.
-            <strong>Black Mirror</strong>, série populaire pour ses
+            <strong><cite>Black Mirror</cite></strong>, série populaire pour ses
             nombreuses critiques des nouvelles
             technologies, illustre parfaitement cette idée à
-            travers l’épisode 1 de la saison 3 : <strong>Nosedive</strong> (ou
-            <strong>Chute Libre</strong>).</p>
+            travers l’épisode 1 de la saison 3 : <strong><cite>Nosedive</cite></strong> (ou
+            <strong><cite>Chute Libre</cite></strong>).</p>
 
         <figure>
             <img src="img/nosedive-post-photo-reseau-social.png" alt="Lacie photographie son petit déjeuner et prépare à le poster sur son réseau social préféré">
